--- a/forms.html
+++ b/forms.html
@@ -68,14 +68,31 @@
         </div>
     </div>
 
-    <div class="des">
-        <h1>stay in the loop</h1>
-        <label for="sname">username</label><br>
-        <input type="text"><br>
-        <label for="em">email</label><br>
-        <input type="text"><br>
+    <footer class="footer">
+  <div class="footer-left">
+    <h2>MeTencil</h2>
+  </div>
 
-    </div>
+  <div class="footer-center">
+    <ul>
+      <li><a href="#">HOME</a></li>
+      <li><a href="#">PRODUCTS</a></li>
+      <li><a href="#">ABOUT</a></li>
+      <li><a href="#">CONTACT US</a></li>
+    </ul>
+  </div>
+
+  <div class="footer-right">
+    <h3>Stay in the loop</h3>
+    <form>
+      <label for="username">Username</label>
+      <input type="text" id="username" placeholder="Enter username">
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="Enter email">
+    </form>
+</div>
+</footer>
+
 
 
 
